# particle-simulator

./: .gitignore  ALGORITHM.md  CONTRIBUTING.md  LICENSE  README.md  compare_pbm_dem.py  main.py  main_coupled.py  main_multi.py  main_pbm.py  main_tree.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
benchmarks/: README.md  analyze_benchmark.py  data.txt  plot_boundary_benchmark.py  plot_results.py  run_boundary_benchmark.py  test.py
collision_detector/: spatial_hash_collision_detector.py
convergence_test/: README.md  convergence_runner.py  plot_convergence.py  reference_calculator.py  supercell_builder.py
dem/: README.md  __init__.py
dem/collision_detector/: README.md  __init__.py  collision_detector_base.py  spatial_hash_collision_detector.py
dem/force_calculator/: README.md  __init__.py  direct_droplet_force_calculator.py  force_calculator_base.py
dem/octree/: README.md  __init__.py  flat_tree.py  force_tree.py  octree_node.py  tree_stats.py  tree_visualizer.py
dem/particle_generator/: README.md  __init__.py  particle_generator_base.py  uniform_droplet_generator.py
dem/particle_state/: README.md  __init__.py  droplet_state.py  particle_state_base.py
dem/periodic_correction/: README.md  __init__.py  comsol_lattice_correction.py
dem/post_processor/: README.md  __init__.py  droplet_post_processor.py
dem/solution/: README.md  __init__.py  droplet_solution.py  solution_base.py
dem/solver/: README.md  __init__.py  euler_droplet_solver.py  solver_base.py
dem/statistics/: README.md  plot_statistics.py  run_direct.py  run_statistics.py  run_tree.py
dem/utils/: README.md
dual_ensemble/: README.md  config.json  metrics.py  plot_dual_ensemble.py  run_common.py  run_system1.py  run_system2.py
force_calculator/: direct_droplet_force_calculator.py  force_calculator_base.py  setup.py
octree/: __init__.py  flat_tree.py  force_tree.py  octree_node.py  test_octree.py
particle_generator/: __init__.py  particle_generator_base.py  setup.py  uniform_droplet_generator.py
particle_state/: __init__.py  droplet_state.py  setup.py
pbm/: README.md  __init__.py  coupling.py  pbm_solver.py  redistribution.py  volume_grid.py
pbm/collision_frequency/: README.md  __init__.py  direct_collision_freq.py  tree_collision_freq.py
pbm/kernels/: README.md  __init__.py  analytical_kernel.py  dem_extracted_kernel.py
periodic_correction/: comsol_lattice_correction.py  setup.py  test_comsol_correction.py
periodic_correction/data/: U_lattice.txt  comsol_params.json
post_processor/: __init__.py  droplet_post_processor.py  post_processor_base.py  setup.py
solution/: droplet_solution.py  setup.py
solver/: __init__.py  euler_droplet_solver.py  setup.py  solver_base.py
statistics/: README.md  config.json  plot_statistics.py  run_direct.py  run_statistics.py  run_tree.py
studies/: README.md  animate_evolution.py  convergence_study.py  euler_method_error.py  postproc_compare.py
tests/: README.md  conftest.py
tests/collision_detector/: test_spatial_hash_collision_detector.py
tests/force_calculator/: test_direct_droplet_force_calculator.py
tests/octree/: test_flat_tree.py  test_force_tree.py  test_tree_stats.py
tests/particle_generator/: test_uniform_droplet_generator.py
tests/particle_state/: test_droplet_state.py
tests/pbm/: test_coupling.py  test_pbm_solver.py  test_redistribution.py  test_volume_grid.py
utils/: setup.py
(+7 files in other folders)
